--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -22,7 +22,8 @@ framework:
     trusted_hosts:   ~
     trusted_proxies: ~
     session:
-        # handler_id set to null will use default session handler from php.ini
+        cookie_lifetime:         3600
+        cookie_httponly:         false
         handler_id:  ~
     fragments:       ~
     http_method_override: true
